--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "i18next": "^23.12.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^15.0.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.26.0",
     "react-select": "^5.8.0",
-    "react-select-country-list": "^2.2.3"
+    "react-select-country-list": "^2.2.3",
+    "taos": "^1.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
